# Rendu_Projet_PROG5

V_base/: ARM_runner_example.c  AUTHORS  ILoveducks  Makefile  Makefile.am  Makefile.in  affichage.c  affichage.h  config.status  ecriture.c  ecriture.h  elf32_reloc_table.c  elf32_reloc_table.h  enfaitcetaitquiavaitecritsalutcestmoi  fusion.c  fusion.h  fusion_table_symboles.c  fusion_table_symboles.h  gestion_endian.c  gestion_endian.h  lecture.c  lecture.h  mains.c  mains.h  o  table_string.c  table_string.h  type_liste_section.c  type_liste_section.h  type_liste_symb.c  verification.c  verification.h
V_base/.deps/: ARM_runner_example.Po  affichage.Po  ecriture.Po  elf32_reloc_table.Po  fusion.Po  fusion_table_symboles.Po  lecture.Po  mains.Po  readheader.Po  sectionTest.Po  table_string.Po  type_liste.Po  type_liste_section.Po  verification.Po
V_base/Examples_loader/: Makefile  config.status  test1.c  test1.s  test2.c  test2.s  test3.c  test3.s  test4.c  test4.s
V_base/Examples_loader/autom4te.cache/: requests
V_base/autom4te.cache/: requests
V_base/test/: example1_header.txt  example1_hsection.txt  example1_reimp.txt  example1_symb.txt  example2_header.txt  example2_hsection.txt  example2_reimp.txt  example2_symb.txt  example2_tsection.txt  example3_header.txt  example3_hsection.txt  example3_symb.txt  example4_header.txt  example4_hsection.txt  example4_reimp.txt  test.sh  test.txt  test_header.sh  test_hsection.sh  test_symb.sh  test_tsection.sh
